se actualiza el contenido de la pagina

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
         <Title>jared quiroz</Title>
     </head>
     <body>
-        esta es mi pagina 
+        a continuacion se presenta la pagina web de desarrollo 
     </body>
 </html>
