aqui se agrego mas contenido

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
         <Title>jared quiroz</Title>
     </head>
     <body>
-        a continuacion se presenta la pagina web de desarrollo 
+        a continuacion se presenta la pagina web de desarrollo de la metria 
     </body>
 </html>
